:bug: bug: Temporary fix for table overflow on cart page

--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -39,11 +39,6 @@ img
 	border-radius: 2px;
 }
 
-table
-{
-	overflow: auto;
-}
-
 th, td
 {
 	padding: 0.5em 1em;
@@ -92,6 +87,11 @@ main a:hover
 	{
 		width: 15vw;
 	}
+
+	table
+	{
+		margin-left: 15em;
+	}
 }
 
 @media screen and (max-width: 360px)
@@ -99,5 +99,10 @@ main a:hover
 	img
 	{
 		width: 20vw;
+	}
+
+	table
+	{
+		margin-left: 15em;
 	}
 }
